--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Floo",
   "license": "license",
   "dependencies": {
+    "@bootstrap-styled/v4": "^3.0.3",
+    "bootstrap": "^4.2.1",
     "d3": "^5.7.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "styled-bootstrap-components": "^3.0.1",
     "styled-components": "^4.1.3",
